@@ -1,5 +1,9 @@
 2008-10-20 Jim Garlick <garlick@llnl.gov>
 
+	* src/listint.c : Properly handle descending numerical ranges.
+
+2008-10-20 Jim Garlick <garlick@llnl.gov>
+
 	* : tag 2.2
 
 	* configure.ac : Force 64-bit on biarch ppc64 configurations.
